UPDATE: Improve training section

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Administración de sistemas</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">CFGS de ADMINISTRACIÓN DE SISTEMAS INFORMÁTICOS EN RED</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -326,8 +326,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Text -->
-                <h2>2014 - 2016 · CFGS de ADMINISTRACIÓN DE SISTEMAS INFORMÁTICOS EN RED</h2><br>
-                <h3>IES Sa Palomera (Blanes)</h3><br>
+                <h5>2014 - 2016 · IES Sa Palomera (Blanes)</h5><br>
                 <h5>RECONOCIMIENTOS:</h5>
                 <ul>
                   <li>Matrícula de honor en base al expediente académico.</li>
@@ -376,7 +375,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Programación</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">CFGS de DESARROLLO DE APLICACIONES WEB</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -386,8 +385,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Text -->
-              <h2>2017 - Actualmente · CFGS de DESARROLLO DE APLICACIONES WEB</h2><br>
-              <h3>Institut Obert de Catalunya (Barcelona)</h3><br>
+              <h5>2017 - Actualmente · Institut Obert de Catalunya</h5><br>
               <h5>CONTENIDO DEL CURSO:</h5>
               <ul>
                 <li>Programación estructurada, modular y orientada a objetos.</li>
@@ -429,7 +427,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Bootcamp Online</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Bootcamp Online Full Stack Developer</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -440,17 +438,24 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <!-- Portfolio Modal - Text -->
-                <h2>2020 · FRONTEND REACT</h2><br>
-                <h3>Geeks Hubs Academy</h3><br>
+                <h5>2020 - Cursando · GeeksHubs Academy</h5><br>
+                <h3>FRONTEND REACT</h3>
                 <h5>CONTENIDO DEL CURSO:</h5>
                 <ul>
                   <li>GIT + GITHUB</li>
-                  <li>MAQUETACIÓN WEB (HTML5, CSS3, Bootstrap, JS Vanilla, JS E6, DOM & BOM)</li>
+                  <li>MAQUETACIÓN WEB (HTML5, CSS3, Bootstrap, Javascript, ES6, DOM & BOM)</li>
                   <li>NODE + NPM</li>
                   <li>REACT JS + REDUX</li>
                   <li>BABEL + WEBPACK</li>
                 </ul>
-                </p>
+                <h3>BACKEND EXPRESS</h3>
+                <h5>CONTENIDO DEL CURSO:</h5>
+                <ul>
+                  <li>EXPRESS</li>
+                  <li>BASES DE DATOS:</li>
+                  <li>SQL</li>
+                  <li>Mongo DB</li>
+                </ul>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Cerrrar
