UPDATE: Add professional updates

--- a/index.html
+++ b/index.html
@@ -160,7 +160,19 @@
       <div class="row">
 
         <!-- Portfolio Item 0 -->
-        <div class="col-md-4 col-lg-4">
+        <div class="col-md-4 col-lg-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal11">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/brand/tappx.png" alt="">
+          </div>
+        </div>
+
+        <!-- Portfolio Item 1 -->
+        <div class="col-md-4 col-lg-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -171,8 +183,8 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 1 -->
-        <div class="col-md-4 col-lg-4">
+        <!-- Portfolio Item 2 -->
+        <div class="col-md-4 col-lg-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -183,8 +195,8 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 2 -->
-        <div class="col-md-4 col-lg-4">
+        <!-- Portfolio Item 3 -->
+        <div class="col-md-4 col-lg-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -469,6 +481,51 @@
   </div>
 
   <!-- Portfolio Modal 3 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tappx</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-circle"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Modal - Text -->
+                <p>
+                  <h2>Programador web</h2>
+                  <h3>Mayo 2020 - Actualmente</h3>
+                </p>
+                <h5>Descripción de las responsabilidades:</h5>
+                <ul>
+                  <li>Desarrollo de la aplicación web de la compañía. Php, Javascript...</li>
+                  <li>Atención y resolución de incidencias relacionadas con bugs.</li>
+                </ul>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-times fa-fw"></i>
+                  Cerrar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 3 -->
   <div class="portfolio-modal modal fade" id="portfolioModal0" tabindex="-1" role="dialog" aria-labelledby="portfolioModal0Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
@@ -494,7 +551,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p>
                   <h2>Programador web</h2>
-                  <h3>Octubre 2019 - Actualmente</h3>
+                  <h3>Octubre 2019 - Mayo 2020</h3>
                 </p>
                 <h5>Descripción de las responsabilidades:</h5>
                 <ul>
